# Game_of_Life

./: .gitignore  CMakeLists.txt  Game_of_Life.cpp  README.md
include/: GameOfLife.h  UI.h  engine.h  main_menu.h  patterns.h  settings.h
src/: GameOfLife.cpp  GameOfLife.ilk  UI.cpp  engine.cpp  main_menu.cpp  patterns.cpp  settings.cpp
